fixed line spacing

--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -18,6 +18,7 @@ time, mark, audio, video {
 	font-size: 1em;
 	font: inherit;
 	vertical-align: baseline;
+	line-height: 1.5rem;
 }
 a {
     text-decoration: none;
